--- a/index.html
+++ b/index.html
@@ -16,6 +16,32 @@
         <div id="content">
     
         </div>
+        <!--         <div id="tracklist">
+        <ul>
+            <li>
+                <img src="images/play-solid.svg" alt="">
+            </li>
+        
+        </ul>
+            <div id="nowPlaying">
+                <p>Playing</p>
+            </div>
+            <ul>
+                <h3>TRACKLIST</h3>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+                <li>5</li>
+                <li>6</li>
+                <li>7</li>
+                <li>8</li>
+                <li>9</li>
+                <li>10</li>
+            </ul>
+        </div>
+         -->
+
     </main>
 </body>
 <script defer src="js/main.js" ></script>
