we making millions

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
         <div id="content">
     
         </div>
+        <div id="playstore">
+            <img src="images/backward-solid.svg" alt="">
+            <img id="playbutton" src="images/play-solid.svg" alt="">
+            <img src="images/forward-solid.svg" alt="">
+            <span></span>
+            <audio src="audio/Takeoff-Casper-(HiphopKit.com).mp3"></audio>
+
+        </div>
         <!--         <div id="tracklist">
         <ul>
             <li>
