I am happy, will finish up tomorrow

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
     <header>TAKEOFF</header>
-    <p>" A Letter To My Brother "</p>
+    <p class="songName" >" CASPER "</p>
     <p style="font-size: 1rem; padding-top: 0.5rem; color: gray;" >1994 - 2022</p>
 </nav>
     <main>
@@ -20,7 +20,10 @@
             <img src="images/backward-solid.svg" alt="">
             <img id="playbutton" src="images/play-solid.svg" alt="">
             <img src="images/forward-solid.svg" alt="">
-            <span></span>
+            <span id="trackLength">
+                <div id="progressBar"></div>
+            </span>
+            <span id="time">00:00 / 03:17</span>
             <audio src="audio/Takeoff-Casper-(HiphopKit.com).mp3"></audio>
 
         </div>
