--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     
         </div>
         <div id="playstore">
-            <img src="images/backward-solid.svg" alt="">
+            <img id="backwards" src="images/backward-solid.svg" alt="">
             <img id="playbutton" src="images/play-solid.svg" alt="">
-            <img src="images/forward-solid.svg" alt="">
+            <img id="fastforward" src="images/forward-solid.svg" alt="">
             <span id="trackLength">
                 <div id="progressBar"></div>
             </span>
