everything working in night just pause&play

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div id="progressBar"></div>
             </span>
             <span id="time">00:00 / 03:17</span>
-            <audio src="audio/Takeoff-Casper-(HiphopKit.com).mp3"></audio>
+            <audio id="audio" src="audio/Takeoff-Casper-(HiphopKit.com).mp3"></audio>
 
         </div>
 
