menu icon added

--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@
     <link rel="icon" href="images/rocket-solid.svg">
 </head>
 <body>
-    <head>
+    <div id="container">
+
+
     <div class="conditions">
         <div id="night-day">
             <img src="images/sun-solid.svg" alt="">
         </div>
+    
+
+    <div id="menu">
+        <img src="images/bars-solid.svg" alt="">
     </div>
-</head>
+
+</div>
+
     <nav>
         
     <header>TAKEOFF</header>
@@ -67,6 +75,8 @@
          -->
 
     </main>
+
+</div>
 </body>
 <script defer src="js/main.js" ></script>
 </html>
