i just made changes on the menu

--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <link rel="icon" href="images/rocket-solid.svg">
 </head>
 <body>
+    <div id="overlay">
+
+        <div id="close">
+            <img src="images/xmark-solid.svg" alt="">
+        </div>
+
+        <div id="navigate">
+            
+            <ul>
+                <li>HOME</li>
+                <li>ABOUT ARTIST</li>
+                <li>LIST OF ARTISTS</li>
+                <li>LYRICS</li>
+                <li>ALBUMS</li>
+            </ul>
+        </div>
+
+
+    </div>
     <div id="container">
 
 
