Menu working on white bg

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
                 <li>LIST OF ARTISTS</li>
                 <li>LYRICS</li>
                 <li>ALBUMS</li>
+                
             </ul>
+            <div id="icons">
+                <img src="images/instagram.svg" alt="">
+                <img src="images/x-twitter.svg" alt="">
+                <img src="images/youtube.svg" alt="">
+            </div>
         </div>
 
 
