I just added the close button on both bg

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div id="overlay">
 
         <div id="close">
-            <img src="images/xmark-solid.svg" alt="">
+            <img id="close-black" src="images/xmark-solid.svg" alt="">
+            <img id="close-white" src="images/xmark-solid-white.svg" alt="" style="display: none;">
         </div>
 
         <div id="navigate">
@@ -42,9 +43,10 @@
         </div>
     
 
-    <div id="menu">
-        <img src="images/bars-solid.svg" alt="">
-    </div>
+        <div id="menu">
+            <img id="menu-black" src="images/bars-solid.svg" alt="">
+            <img id="menu-white" src="images/bars-solid-white.svg" alt="" style="display: none;">
+        </div>
 
 </div>
 
