black and white working now

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
                 
             </ul>
             <div id="icons">
-                <img src="images/instagram.svg" alt="">
-                <img src="images/x-twitter.svg" alt="">
-                <img src="images/youtube.svg" alt="">
+                <img id="instagram-black" src="images/instagram.svg" alt="">
+                <img id="instagram-white" src="images/instagram-white.svg" alt="" style="display: none;">
+                <img id="twitter-black" src="images/x-twitter.svg" alt="">
+                <img id="twitter-white" src="images/x-twitter-white.svg" alt="" style="display: none;">
+                <img id="youtube-black" src="images/youtube.svg" alt="">
+                <img id="youtube-white" src="images/youtube-white.svg" alt="" style="display: none;">
             </div>
         </div>
 
