--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
             <div id="volume-control">
             <img id="volume-icon" class="volume-icon" src="images/volume-high-solid.svg" alt="Volume">
             <img id="mute-icon"  class="volume-icon" src="images/volume-xmark-solid.svg" alt="Mute" style="display: none;">
+            <img id="volume-icon-white" class="volume-icon-white" src="images/volume-high-solid-white.svg" alt="Volume" style="display: none;">
+            <img id="mute-icon-white"  class="volume-icon-white" src="images/volume-xmark-solid-white.svg" alt="Mute" style="display: none;">
+            
             <input type="range" id="volume" name="volume" min="0" max="1" step="0.01" class="vertical-volume" style="display: none;">
             </div>
         </div>
