I just added the related artist page

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div id="navigate">
             
             <ul>
-                <li>HOME</li>
+                <a href="index.html"><li>HOME</li></a>
                 <a href="about-artist.html"><li>ABOUT ARTIST</li></a>
-                <li>RELATED ARTISTS</li>
+                <a href="related-artists.html"><li>RELATED ARTISTS</li></a>
                 <li>MUSIC VIDEOS</li>
                 <li>ALBUMS</li>
                 
