--- a/related-artists.html
+++ b/related-artists.html
@@ -20,7 +20,7 @@
             <ul>
                 <a href="index.html"><li>HOME</li></a>
                 <a href="about-artist.html"><li>ABOUT ARTIST</li></a>
-               <a href="related-artists.html"> <li>RELATED ARTISTS</li></a>
+                <li>RELATED ARTISTS</li>
                 <li>MUSIC VIDEOS</li>
                 <li>ALBUMS</li>
                 
@@ -55,17 +55,29 @@
 
     <nav>
         
-    <header>ABOUT</header>
-    <p class="songName" >" TAKEOFF "</p>
+    <header>RELATED</header>
+    <p class="songName" >" ARTISTS "</p>
     <p style="font-size: 1rem; padding-top: 0.5rem; color: gray;" >1994 - 2022</p>
 </nav>
 
     <main>
         <div id="content-about">
-    <div id="top-content">
+    <div id="top-content-related">
+        <div>
         <img src="images/take.png" alt="">
-        <p> <strong>Kirsnick Khari Ball</strong> (June 18, 1994 – November 1, 2022), known professionally as Takeoff, was an American rapper. He was best known as the youngest member 
-            of the hip hop group Migos along with his uncle Quavo and close affiliate Offset. The group scored multiple top-10 hits on the Billboard Hot 100 including "MotorSport" (featuring Nicki Minaj and Cardi B), "Stir Fry", "Walk It Talk It" (featuring Drake), and "Bad and Boujee" (featuring Lil Uzi Vert), the last of which peaked at number one on the Billboard Hot 100 chart. He also received two Grammy Award nominations. On November 1, 2022, Takeoff was fatally shot in Houston, Texas.</p>
+        <h4>TAKEOFF</h4>
+        <p>" Kirsnick Khari Ball "</p>
+    </div>
+    <div>
+        <img src="images/set.png" alt="">
+        <h4>OFFSET</h4>
+        <p>" Kiari Kendrell Cephus "</p>
+    </div>
+    <div>
+       <img src="images/quavo-balmain-paris-fw-2023-billboard-1548.png" alt="">
+         <h4>QUAVO</h4>
+         <p>" Quavious Keyate Marshall "</p>
+    </div>
     </div>
         </div>
         <div id="playstore">
