--- a/related-artists.html
+++ b/related-artists.html
@@ -20,7 +20,7 @@
             <ul>
                 <a href="index.html"><li>HOME</li></a>
                 <a href="about-artist.html"><li>ABOUT ARTIST</li></a>
-                <li>RELATED ARTISTS</li>
+               <a href="related-artists.html"> <li>RELATED ARTISTS</li></a>
                 <li>MUSIC VIDEOS</li>
                 <li>ALBUMS</li>
                 
@@ -57,7 +57,7 @@
         
     <header>RELATED</header>
     <p class="songName" >" ARTISTS "</p>
-    <p style="font-size: 1rem; padding-top: 0.5rem; color: gray;" >1994 - 2022</p>
+    <p style="font-size: 1rem; padding-top: 0.5rem; color: transparent;" >1994 - 2022</p>
 </nav>
 
     <main>
