fixed related page

--- a/related-artists.html
+++ b/related-artists.html
@@ -64,18 +64,33 @@
         <div id="content-about">
     <div id="top-content-related">
         <div>
-        <img src="images/take.png" alt="">
-        <h4>TAKEOFF</h4>
+        <img src="images/migos.jpeg" alt="">
+        <p>MIGOS</p>
      
     </div>
     <div>
         <img src="images/set.png" alt="">
-        <h4>OFFSET</h4>
+        <p>OFFSET</p>
    
     </div>
     <div>
        <img src="images/quavo-balmain-paris-fw-2023-billboard-1548.png" alt="">
-         <h4>QUAVO</h4>
+         <p>QUAVO</p>
+   
+    </div>
+    <div>
+        <img src="images/rich.jpeg" alt="">
+        <p>RICH THE KID</p>
+   
+    </div>
+    <div>
+        <img src="images/young-thug-square.jpg.webp" alt="">
+        <p>YOUNG THUG</p>
+   
+    </div>
+    <div>
+        <img src="images/21-savage-american-dream-trailer-2024-billboard-1548.jpg.webp" alt="">
+        <p>21 SAVAGE</p>
    
     </div>
     
