--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="index.html"><li>HOME</li></a>
                 <a href="about-artist.html"><li>ABOUT ARTIST</li></a>
                 <a href="related-artists.html"><li>RELATED ARTISTS</li></a>
-                <li>MUSIC VIDEOS</li>
+                <a href="musicVideo.html"><li>MUSIC VIDEOS</li></a>
                 <li>ALBUMS</li>
                 
             </ul>
