--- a/related-artists.html
+++ b/related-artists.html
@@ -65,32 +65,32 @@
     <div id="top-content-related">
         <div>
         <img src="images/migos.jpeg" alt="">
-        <p>MIGOS</p>
+        <p>" MIGOS "</p>
      
     </div>
     <div>
         <img src="images/set.png" alt="">
-        <p>OFFSET</p>
+        <p>" OFFSET "</p>
    
     </div>
     <div>
        <img src="images/quavo-balmain-paris-fw-2023-billboard-1548.png" alt="">
-         <p>QUAVO</p>
+         <p>" QUAVO "</p>
    
     </div>
     <div>
         <img src="images/rich.jpeg" alt="">
-        <p>RICH THE KID</p>
+        <p>" RICH THE KID "</p>
    
     </div>
     <div>
         <img src="images/young-thug-square.jpg.webp" alt="">
-        <p>YOUNG THUG</p>
+        <p>" YOUNG THUG "</p>
    
     </div>
     <div>
         <img src="images/21-savage-american-dream-trailer-2024-billboard-1548.jpg.webp" alt="">
-        <p>21 SAVAGE</p>
+        <p>" 21 SAVAGE "</p>
    
     </div>
     
